# PuzzleSolver

./: .editorconfig  .gitignore  CMakeLists.txt  InputReader.cpp  InputReader.h  PazzlePeice.cpp  PazzlePeice.h  README.md  circle.yml  error_tests.py  tester.py  working_makefile
src/: InputReader.cpp  InputReader.h  Puzzle.cpp  Puzzle.h  PuzzlePiece.cpp  PuzzlePiece.h  PuzzleSolution.cpp  PuzzleSolution.h  PuzzleSolver.cpp  PuzzleSolver.h  PuzzleValidator.cpp  PuzzleValidator.h  RotationSolution.cpp  RotationSolution.h  RotationSolver.cpp  RotationSolver.h  TypesMap.cpp  TypesMap.h  main.cpp
tests/: duplicate_pieces.txt  extra_pieces.txt  invalid_numbers.txt  invalid_piece.txt  missing_corners.txt  missing_edges.txt  missing_pieces.txt  no_sol.txt  too_many_pieces.txt
